# interpreter

./: .gitignore  README.md  lefthook.yml  pom.xml
.github/: dependabot.yml
.github/workflows/: gradle.yml  release.yml  rust.yml
lang/: settings.gradle
lang/app/: build.gradle
lang/app/src/main/java/lang/: App.java
lang/app/src/main/java/lang/examples/: AstVisualizerExamples.java
lang/app/src/main/java/lang/lexer/: Lexer.java
lang/app/src/main/java/lang/parser/: LanguageParser.java  StatementParserRegistry.java
lang/app/src/main/java/lang/repl/: LanguageREPL.java
lang/app/src/main/java/lang/token/: Keywords.java  Token.java  TokenPosition.java  TokenType.java
lang/app/src/test/java/lang/: AppTest.java  ExpressionEvaluatorTest.java  LexerTest.java
lang/app/src/test/java/lang/builtins/: BuiltinFunctionsTest.java
lang/app/src/test/java/lang/classes/: ClassRuntimeBehaviorTests.java  ClassSystemTest.java
lang/app/src/test/java/lang/evaluator/: ComprehensiveEvaluatorTest.java  RealWorldScenariosTest.java
lang/app/src/test/java/lang/lexer/: LexerTest.java
lib/: Cargo.toml  rustfmt.toml
lib/.cargo/: config.toml
lib/src/: main.rs  repl.rs  token.rs
lib/src/ast/: expression.rs  literal.rs  mod.rs  statements.rs
lib/src/evaluator/: env.rs  expressions.rs  mod.rs  objects.rs  statements.rs
lib/src/lexer/: mod.rs  parser.rs  parsers.rs  stream.rs
lib/src/parser/: expressions.rs  mod.rs  precedence.rs  statements.rs
src/main/java/com/interpreter/: Interpreter.java  Main.java
src/test/java/com/interpreter/: InterpreterTest.java
(+264 files in other folders)
